@@ -103,12 +103,8 @@ extern double atan2 ___P ((double, double));
 #include "dummypwd.h"
 #endif
 
-#if ENABLE_NLS
-#include <libintl.h>
+#include "gettext.h"
 #define _(String) gettext (String)
-#else
-#define _(String) String
-#endif
 
 #if HAVE_LC_MESSAGES
 #include <locale.h>
