@@ -94,12 +94,8 @@ extern void *memcpy ___P ((void *, void *, size_t));
 #include <sys/stat.h>
 #endif
 
-#if ENABLE_NLS
-#include <libintl.h>
+#include "gettext.h"
 #define _(String) gettext (String)
-#else
-#define _(String) String
-#endif
 
 #if HAVE_LC_MESSAGES
 #include <locale.h>
